--- a/styles/style.css
+++ b/styles/style.css
@@ -1,8 +1,55 @@
 @charset "UTF-8";
 
-:root{
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI",
+        Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue",
+        sans-serif;
+}
 
-  --cor-1: #49a09d;
-  --cor-2: #5f2c82;
-  
+body,
+html {
+    background-color: var(--cor-2);
+    height: 100vh;
+    width: 100vw;
+}
+
+:root {
+    --cor-1: #49a09d;
+    --cor-2: #5f2c82;
+}
+
+main {
+    position: relative;
+    height: 100vh;
+    width: 100vw;
+}
+
+section#login {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    background-color: white;
+    width: 250px;
+    height: 500px;
+    border-radius: 20px;
+    overflow: hidden;
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.5);
+    transition: width 0.3s, height 0.3s;
+    transition-timing-function: ease;
+}
+
+section#login > div#image {
+    background: var(--cor-2) url(../assets/img.jpg) no-repeat;
+    background-size: cover;
+    height: 200px;
+    display: block;
+}
+
+section#login > div#formulario {
+    display: block;
+    padding: 10px;
 }
