--- a/styles/media-query.css
+++ b/styles/media-query.css
@@ -38,13 +38,21 @@
   }
 
   section#login > div#image{
-    float: left;
+    float: right;
     width: 50%;
     height: 100%;
   }
 
-  section#login > divformulario{
-    float: right;
+  section#login > div#formulario{
+    float: left;
     width: 50%;
+  }
+
+  div#formulario p {
+    font-size: 2em;
+  }
+
+  div#formulario p {
+    font-size: 1.2em;
   }
 }
